# starfall-engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.claude/agents/: build-systems-engineer.md  editor-tools-programmer.md  game-director.md  game-engine-programmer.md  lua-gameplay-programmer.md  rpg-systems-designer.md
.claude/commands/opsx/: archive.md  propose.md
.claude/skills/check-deps/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/module/: SKILL.md
.claude/skills/openspec-archive-change/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/push/: SKILL.md
cmake/: StarfallModule.cmake  StarfallTests.cmake  StarfallWarnings.cmake
cmake/tests/: StarfallModuleTest.cmake
docs/: DesignDoc.md  GameDesign.md
games/my_rpg/: CMakeLists.txt
games/my_rpg/src/: main.cpp
include/engine/assets/: asset_loader.hpp  texture.hpp
include/engine/audio/: audio_system.hpp  music.hpp  sound.hpp
include/engine/core/: logger.hpp  result.hpp
include/engine/input/: action_map.hpp  input_state.hpp
include/engine/math/: color.hpp  ivec2.hpp  rect.hpp  vec2.hpp
include/engine/render/: animated_sprite.hpp  animation_clip.hpp  camera_2d.hpp  renderer.hpp
include/engine/runtime/: app_config.hpp  application.hpp
include/engine/scene/: sweep.hpp  tile_layer.hpp  tile_set.hpp  tilemap.hpp
openspec/: config.yaml
openspec/changes/archive/2026-06-17-bootstrap-cmake-and-window/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-bootstrap-cmake-and-window/specs/build-system/: spec.md
openspec/changes/archive/2026-06-17-bootstrap-cmake-and-window/specs/runtime-window/: spec.md
openspec/changes/archive/2026-06-17-sprite-rendering/: design.md  tasks.md
openspec/changes/archive/2026-06-17-sprite-rendering/specs/2d-renderer/: spec.md
openspec/changes/archive/2026-06-17-sprite-rendering/specs/runtime-window/: spec.md
openspec/changes/archive/2026-06-17-sprite-rendering/specs/texture-assets/: spec.md
openspec/changes/archive/2026-06-18-audio-foundation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-18-audio-foundation/specs/audio-system/: spec.md
openspec/changes/archive/2026-06-18-audio-foundation/specs/runtime-window/: spec.md
openspec/changes/archive/2026-06-18-input-and-movement/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-18-input-and-movement/specs/build-system/: spec.md
openspec/changes/archive/2026-06-18-input-and-movement/specs/input-actions/: spec.md
openspec/changes/archive/2026-06-18-input-and-movement/specs/runtime-window/: spec.md
openspec/changes/archive/2026-06-18-sprite-animation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-18-sprite-animation/specs/sprite-animation/: spec.md
openspec/changes/audio-foundation/: tasks.md
openspec/changes/input-and-movement/: design.md  tasks.md
openspec/changes/sprite-animation/: tasks.md
openspec/changes/sprite-rendering/: proposal.md  tasks.md
openspec/changes/tilemap-and-collision/: design.md  proposal.md  tasks.md
openspec/changes/tilemap-and-collision/specs/tilemap/: spec.md
openspec/specs/2d-renderer/: spec.md
openspec/specs/audio-system/: spec.md
openspec/specs/build-system/: spec.md
openspec/specs/input-actions/: spec.md
openspec/specs/runtime-window/: spec.md
openspec/specs/sprite-animation/: spec.md
openspec/specs/texture-assets/: spec.md
scripts/: dev-shell.ps1
src/assets/: CMakeLists.txt  asset_loader.cpp  placeholder.cpp  texture.cpp
src/audio/: CMakeLists.txt  audio_system.cpp  music.cpp  placeholder.cpp  sound.cpp
src/core/: CMakeLists.txt  logger.cpp
src/editor/: CMakeLists.txt  main.cpp
src/input/: CMakeLists.txt  action_map.cpp  input_state.cpp  placeholder.cpp
src/math/: CMakeLists.txt  placeholder.cpp
src/render/: CMakeLists.txt  animated_sprite.cpp  placeholder.cpp  renderer.cpp
src/runtime/: CMakeLists.txt  application.cpp
src/scene/: CMakeLists.txt  placeholder.cpp  sweep.cpp  tile_set.cpp  tilemap.cpp
src/scripting/: CMakeLists.txt  placeholder.cpp
tests/: CMakeLists.txt
tests/assets/: CMakeLists.txt  asset_loader_tests.cpp
tests/audio/: CMakeLists.txt  audio_system_tests.cpp
tests/common/: sdl_fixture.hpp
tests/input/: CMakeLists.txt  action_map_tests.cpp  input_state_tests.cpp
tests/render/: CMakeLists.txt  animated_sprite_tests.cpp  renderer_tests.cpp
tests/scene/: CMakeLists.txt  tilemap_tests.cpp
tools/: gen_iden_placeholder.py  gen_placeholder_audio.py  gen_placeholder_tileset.py
